the one where git {add,commit} becomes easy

--- a/devbot.cabal
+++ b/devbot.cabal
@@ -25,6 +25,7 @@ executable devbot
                     ,   bytestring
                     ,   connection
                     ,   case-insensitive
+                    ,   ConfigFile
                     ,   github
                     ,   http-client
                     ,   http-client-tls
